version/0.30/_sources/api/solver/_autosummary/settings/repair_periodic.rst.txt
:orphan:

.. _repair_periodic:

repair_periodic
===============

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.repair_periodic
    :show-inheritance:

.. rubric:: Arguments

==========================================   =========================================

Argument                                                                       Summary

==========================================   =========================================
:ref:`repair_angle <repair_angle>`                               'repair_angle' child.

:ref:`periodic_input <periodic_input>`                      Id/name of zone to repair.

:ref:`angle_input <angle_input>`                 Desired angle of rotation in degrees.

:ref:`repair_periodic <repair_periodic_1>`                    'repair_periodic' child.

==========================================   =========================================

.. rubric:: Included in:

======================================   ==========================================

Parent                                                                      Summary

======================================   ==========================================
:ref:`repair_improve <repair_improve>`       The repair and improve quality object.

======================================   ==========================================

